--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
   <small>
-    <span class="glyphicon glyphicon-copyright-mark"></span> Framgia
+    ※ Nguyen Van Vuong <span class="glyphicon glyphicon-copyright-mark"></span> Framgia
   </small>
 </footer>
