--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @micropost.title) %>
 <div class="center">
   <button type="button" class="btn btn-info btn-hg" style="font-size: 15px;font-weight: bold">
   <span class="glyphicon glyphicon-tags"></span>&nbsp;&nbsp;Post Detail
