--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 	      <div class="row">
 		      <div class="col-md-3">
 		      	<button type="button" class="btn btn-warning btn-hg" style="font-size: 15px;font-weight: bold">
-						  <span class="glyphicon glyphicon-thumbs-up"></span> FRAMGIA BLOG SYSTEM
+						  <span class="glyphicon glyphicon-thumbs-up"></span> RUBY on RAILS BLOG SYSTEM
 						  <br/>
 						  <%= Date.today.to_s %>
 						</button>
