--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -8,6 +8,9 @@
   <li <% if current_page?(user_path(@user)) %>class="active"<% end %>>
   	<%= link_to "My Page", user_path(@user) %>
   </li>
+  <li <% if current_page?(edit_user_path(@user)) %>class="active"<% end %>>
+  	<%= link_to "Edit Profile", edit_user_path(@user) %>
+  </li>
   <li>
   	<%= link_to "Sign out", signout_path, method: "delete" %>	
   </li>
