--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing user</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<h1>Editing Profile</h1>
+<div class = "login-form">
+	<%= form_for(@user, :html => {autocomplete: 'off'}) do |f| %>
+		<%= render 'shared/error_messages', object: f.object %>
+	  <div class="field form-group">
+	    <%= f.text_field :name, class: 'form-control login-field'%>
+	    <label class="login-field-icon fui-user" for="user_name"></label>
+	  </div>
+	  <div class="field form-group">
+	    <%= f.text_field :phone, class: 'form-control login-field'%>
+	    <label class="login-field-icon glyphicon glyphicon-phone" for="user_phone"></label>
+	  </div>
+	  <div class="actions">
+	    <%= f.submit 'Edit', :class => 'btn btn-info btn-block' %>
+	  </div>
+	<% end %>
+</div>
