--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,11 @@
 <div class="alert alert-success">
-  <strong>#</strong> <%= comment.content %>.
+  <strong>
+  	<%= 
+  		if(comment.name.nil?)
+  			"No name"
+  		else
+  			comment.name
+  		end
+  	%>
+  :</strong> <%= comment.content %>
 </div>
