--- a/app/views/layouts/_side_bar.html.erb
+++ b/app/views/layouts/_side_bar.html.erb
@@ -1,4 +1,5 @@
 <ul class="nav nav-pills nav-stacked">
+	<% @user = current_user %>
   <li <% if current_page?(new_micropost_path) %>class="active"<% end %>>
   	<%= link_to "Submit New Post", new_micropost_path %>
   </li>
